Added QT Documentation to readme

--- a/CIS4930 Novel User Interfaces/Project 1/readme.me
+++ b/CIS4930 Novel User Interfaces/Project 1/readme.me
@@ -1,2 +1,7 @@
----
-Woah an update
+Libraries:
+
+QT Canvas:
+
+
+Installation:
+https://www.qt.io/download-qt-installer-oss?utm_referrer=https%3A%2F%2Fwww.qt.io%2Fdownload-open-source
