--- a/CIS4930 Novel User Interfaces/Project 1/readme.me
+++ b/CIS4930 Novel User Interfaces/Project 1/readme.me
@@ -10,6 +10,35 @@ https://www.qt.io/offline-installers
 https://www.qt.io/download-qt-installer-oss?utm_referrer=https%3A%2F%2Fwww.qt.io%2Fdownload-open-source
 
 
+Set-up Guide:
+1. Qt Library
+    1. This project relies on the Qt library. As of now, the best way to get this project working requires an account
+        with Qt which can be made here: https://login.qt.io/login. You will need to verify your email address.
+
+    2. Once you have created an account you will need to download the 40 MB executable installer found here
+        https://www.qt.io/download-qt-installer-oss?utm_referrer=https%3A%2F%2Fwww.qt.io%2Fdownload-open-source
+
+    3. Once you have downloaded this executable you will need to run it. You will be required to use your account to
+        begin the installation. The installation is 1.21 GB, and I am storing it on my C Drive.
+
+    I. Future Improvements:
+        Store the necessary libraries in the project itself and avoid the need to create an account,
+            install and run the installer executable.
+
+
+
+
+    Installation will require an account. Which can be set up here: https://login.qt.io/login
+
+
+
+    This will require an account. So set up an account and install this library to the C drive.
+    Future iteration will incorporate the necessary libraries into this program
+
+
+
+
+
 Please include a README file describing what works and
 what does not, the results of your experiments, any known bugs, and any problems you
 encountered
