Added Word doc Resume

--- a/resume/template.tex
+++ b/resume/template.tex
@@ -54,7 +54,7 @@
 \section{Education}
 
 \cventry{Jan 2019--May 2024}{B.S. in Computer Science \& Engineering}{University of North Florida}{}{}{
-Focus: Machine Learning, Algorithms, and Data Science.
+Focus: Machine Learning, and Data Science.
 }
 
 \cventry{Jul 2018--Jun 2019}{Associate of Arts: Computer Science}{Hillsborough Community College}{}{}{
@@ -64,6 +64,13 @@ Focus: Machine Learning, Algorithms, and Data Science.
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 \section{Work Experience}
+
+\cventry{May 2024--Aug 2024}{Data Science for Social good}{Florida Health Justice Project}{Jacksonville, FL}{}{
+\begin{itemize}
+\item Used data science, R, Python, and SQL to identify Americans in the missing middle without health insurance
+\item Worked with a team group of people to come together and effectively utilized diverse stengths
+\end{itemize}
+}
 
 \cventry{May 2020--Aug 2023}{Machine Learning Research Assistant}{University of North Florida}{Jacksonville, FL}{}{
 \begin{itemize}
@@ -112,5 +119,11 @@ Focus: Machine Learning, Algorithms, and Data Science.
 \cvitem{Tools}{GitHub, Linux, MATLAB}
 
 %----------------------------------------------------------------------------------------
+%	HOBBIES
+%----------------------------------------------------------------------------------------
+\section{Hobbies}
 
+\cvitem{}{Outdoors: Camping, Fishing, Hiking. Indoors: Reading, Writing, Computer games, Movies, Board Games.}
+
+%---------------------------------------------------------------------------------------
 \end{document}
